Update API base URL in production environment

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://huggingface.co/spaces/shivang25042001/pixellift-backend
+VITE_API_BASE_URL=https://shivang25042001-pixellift-backend.hf.space
